# databricks-access-audit

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Databricks Access Audit.ipynb  Databricks Group Audit Tool.ipynb  LICENSE  README.md  group-audit.ipynb  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml  sdk-compat.yml  security.yml
capabilities/: index.html
changelog/: index.html
databricks_access_audit/: __init__.py  __main__.py  _classification.py  _diff_html_renderer.py  _group_html_renderer.py  _group_tree_renderer.py  _html_renderer.py  _resource_html_renderer.py  _tree_renderer.py  access_cloner.py  catalog_scanner.py  cli.py  client.py  config.py  csv_output.py  elevate.py  escalation.py  group_resolver.py  local_groups.py  models.py  principal_auditor.py  principal_comparer.py  redundancy.py  resource_auditor.py  revoke.py  schema_scanner.py  sdk_client.py  snapshot.py  stale_checker.py  table_scanner.py  volume_scanner.py  workspace.py  workspace_object_scanner.py
databricks_group_audit/: __init__.py  __main__.py  _classification.py  catalog_scanner.py  cli.py  client.py  csv_output.py  elevate.py  escalation.py  group_resolver.py  local_groups.py  models.py  principal_auditor.py  redundancy.py  revoke.py  schema_scanner.py  sdk_client.py  snapshot.py  stale_checker.py  table_scanner.py  workspace.py  workspace_object_scanner.py
docs/: capabilities.md  getting-started.md  index.md  troubleshooting.md
docs/how-it-works/: architecture.md  azure-b2b-guests.md  grant-classification.md
docs/reference/: cli.md  output-formats.md  python-api.md  quick-reference.md
docs/use-cases/: access-map.md  access-provisioning.md  access-review.md  compliance.md  incident-response.md  offboarding.md  permission-hygiene.md  principal-audit.md  resource-audit.md  stale-access.md
getting-started/: index.html
how-it-works/architecture/: index.html
how-it-works/azure-b2b-guests/: index.html
how-it-works/grant-classification/: index.html
media/: group-audit.html  principal-audit.html  terminal-group-audit.html  terminal-principal-audit.html
reference/cli/: index.html
reference/output-formats/: index.html
reference/python-api/: index.html
reference/quick-reference/: index.html
search/: search_index.json
tests/: conftest.py  test_access_cloner.py  test_catalog_scanner.py  test_cli.py  test_client.py  test_config.py  test_csv_output.py  test_elevate.py  test_escalation.py  test_group_resolver.py  test_local_groups.py  test_principal_auditor.py  test_principal_comparer.py  test_principal_source.py  test_redundancy.py  test_resource_auditor.py  test_revoke.py  test_schema_scanner.py  test_sdk_client.py  test_snapshot.py  test_stale_checker.py  test_table_scanner.py  test_volume_scanner.py  test_workspace.py  test_workspace_object_scanner.py
troubleshooting/: index.html
use-cases/access-map/: index.html
use-cases/access-provisioning/: index.html
use-cases/access-review/: index.html
use-cases/compliance/: index.html
use-cases/incident-response/: index.html
use-cases/offboarding/: index.html
use-cases/permission-hygiene/: index.html
use-cases/principal-audit/: index.html
use-cases/resource-audit/: index.html
use-cases/stale-access/: index.html
